Changes for 1.1alpha1:

 - fixed MacOS X related compilation issues. Thanks to Charles Galpin. (Alexei)
 - fixed calculation of maximum values for table 'trends'. Thanks to Igor. (Alexei)
 - fixed evaluation of expressions when a number contains spaces (Alexei)
 - added Gentoo start-up scripts. Thanks to Andreas Tophofen. (Alexei)
 - fixed PostgreSQL schema. Removed unnecessary comma. (Alexei)

Changes for 1.0:

 - changed graph legend a little bit. Thanks to Igor. (Alexei)
 - added support of IP adresses returned by SNMP agents (Alexei)
 - fixed serious issue with sending of alerts (Alexei)
 - small fix in latestalarms.php (Alexei)
 - added support for simple check 'tcp,<port>' (Alexei)
 - added template 'Application.MySQL' (Alexei)
 - added button "add items from template" (Alexei)
 - added template 'Host.SNMP'. Thanks to Kenneth Durrant. (Alexei)
 - fixed host statistics in report1.php (Alexei)
 - templates were renamed to "Host.Unix", "Host.Win32" and "Host.Standalone" (Alexei)
 - fixed problem with undefined socklen_t under Solaris (Alexei)
 - show user groups in the list of users. Thanks to Igor (Alexei)
 - fixed sql statement in trigger definition form (Alexei)
 - changed all versions from 1.0beta14 to 1.0 (Alexei)
 - converted redhat scripts from DOS to UNIX format (Alexei)

Changes for 1.0beta14:

 - added DB patches for migration to 1.0beta14 (Alexei)
 - changed logic of actions: scope=1 (triggerid=hostid), 2 (triggerid=0) (Alexei)
 - fixed compilation of --with-pgsql on non-GCC platforms (Alexei)
 - fixed refresh in actions screen (Alexei) 
 - show severity of triggers in the list (Alexei)
 - fixed trigger update. Value of the trigger sets to UNKNOWN. (Alexei)
 - fixed --with-[net|ucd]-snmp to work with various paths (Alexei)
 - changed css.css to follow W3C standard (Alexei)
 - changed DB schema. Dropped foreign key for table actions (Alexei)
 - fixed handling of special chars in adding from templates (Alexei)